Finished week4 notes; still very confused

--- a/week4/notes/airline/flights/templates/flights/index.html
+++ b/week4/notes/airline/flights/templates/flights/index.html
@@ -4,7 +4,11 @@
     <h1>Flights!</h1>
     <ul>
         {% for aFlight in flights %}
-            <li>{{ aFlight.origin }} to {{ aFlight.destination }}</li>
+            <li>
+                <a href="{% url 'flight' aFlight.id %}">
+                    {{ aFlight.origin }} to {{ aFlight.destination }}
+                </a>
+            </li>
         {% endfor %}
     </ul>
 {% endblock %}
