--- a/week4/notes/airline/flights/templates/flights/flight.html
+++ b/week4/notes/airline/flights/templates/flights/flight.html
@@ -7,5 +7,26 @@
         <li>Origin: {{ flight.origin }}</li>
         <li>Destination: {{ flight.destination }}</li>
         <li>Duration: {{ flight.duration }}</li>
+        <li>Passengers</li>
+        <ol>
+            {% for passenger in passengers %}
+                <li>{{ passenger }}</li>
+            {% empty %}
+                <li>No passengers</li>
+            {% endfor %}
+        </ol>
     </ul>
+
+    <h2>Add Passenger</h2>
+
+    <form action="{% url 'book' id %}" method="post">
+        {% csrf_token %}
+        <select name="passenger">
+            {% for passenger in non_passengers %}
+                <option value="{{ passenger.id }}">{{ passenger }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit">
+    </form>
+    <a href="{% url 'index' %}">Back to Flight List</a>
 {% endblock %}
